// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`selectors bookSelector selects the form 1`] = `
Object {
  "category": "software",
  "description": "",
  "stars": 1,
  "title": "",
  "year": 2017,
}
`;

exports[`selectors fieldSelectorBuilder selects a concrete field 1`] = `
Object {
  "errors": Object {},
  "focus": false,
  "initialValue": "",
  "intents": Array [],
  "model": "form.book.title",
  "pending": false,
  "pristine": false,
  "retouched": false,
  "submitFailed": false,
  "submitted": false,
  "touched": false,
  "valid": true,
  "validated": false,
  "validating": false,
  "validity": Object {},
  "value": "stuff",
}
`;

exports[`selectors formSelector selects the form 1`] = `
Object {
  "errors": Object {},
  "focus": false,
  "initialValue": Object {
    "category": "software",
    "description": "",
    "stars": 1,
    "title": "",
    "year": 2017,
  },
  "intents": Array [],
  "model": "form.book",
  "pending": false,
  "pristine": true,
  "retouched": false,
  "submitFailed": false,
  "submitted": false,
  "touched": false,
  "valid": true,
  "validated": false,
  "validating": false,
  "validity": Object {},
  "value": Object {
    "category": "software",
    "description": "",
    "stars": 1,
    "title": "",
    "year": 2017,
  },
}
`;
